Validations for sequnce names
Change-Id: I0a6149eafd3832ce7960fef1a242551708ecca67

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -364,6 +364,10 @@ com.wavemaker.platform.data$PkColLengGrtZero=Primary key column with "{0}" data 
 
 com.wavemaker.platform.data$PkColLengtLessTwoFiveFive=Primary key column with "{0}" data type length can not exceed 255 characters.
 
+com.wavemaker.platform.data$PkColSequnceTypeInvalid= Primary key column with generator type sequence should have sql type integer, big_integer or big_decimal
+
+com.wavemaker.platform.data$PkColSequenceValueEmpty=Primary key column with generator type sequence should have a sequence name.
+
 com.wavemaker.platform.data$ColLenGrtZero="{0}" column with "{1}" data type length should not be NULL or 0.
 
 com.wavemaker.platform.deployment$UnknownDeploymentTarget=Unknown deployment target: "{0}"
