Made export errors more intutive
Change-Id: I91028e684b38aa4bbe2b8988eb353bc935684cbe

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -296,6 +296,8 @@ com.wavemaker.platform.data$FailedToExeScript=Failed to execute script.
 
 com.wavemaker.platform.data$FailureInDataModelExport=Failed to Export data model "{0}".
 
+com.wavemaker.platform.data$FailureInDataModelExportTask=Failed to Export data model "{0}".Reason: "{1}"
+
 com.wavemaker.platform.data$FailedToGetDDL=Failed to get ddl in exporting data model.
 
 com.wavemaker.platform.data$FailureInReadingConProps=Failed to read connection properties from property file.
