Adding support for Prefab Migration.
Change-Id: Iab9e91d1a66a022b36bd601eab24896c8e5d42cc

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -128,6 +128,8 @@ com.wavemaker.platform$page_compressed_file_corrupted=Page "{0}" compressed file
 
 com.wavemaker.platform$ProjectNewerThanStudio=Can''t open project "{0}" because it is newer than the studio (project version "{1}", studio project version "{2}")
 
+com.wavemaker.platform$PrefabNewerThanStudio=Can''t open prefab "{0}" because it is newer than the studio (prefab version "{1}", studio prefab version "{2}")
+
 com.wavemaker.platform$NoDataServiceMgrBeanFound=Common backup directory already exists  "{0}"
 
 com.wavemaker.platform$NoProjectFromSession=No open project; session expired or invalid session
@@ -135,6 +137,8 @@ com.wavemaker.platform$NoProjectFromSession=No open project; session expired or 
 com.wavemaker.platform$AddServiceUpgrade_NoSpringFile=No springFile configured in service "{0}"
 
 com.wavemaker.platform$ProjectTooOldForUpgrade=Can''t open project "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old project. Found project version "{1}".
+
+com.wavemaker.platform$PrefabTooOldForUpgrade=Can''t open prefab "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old prefab. Found prefab version "{1}".
 
 com.wavemaker.platform.project$TooManyServiceWires=Too many serviceWire beans in service "{0}": {1}
 
