Fixing Resource Not Found error for theme.
Change-Id: If240ff3db359f5970c678e641177166e9805c36c

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -553,3 +553,5 @@ com.wavemaker.deployment$IdDoesNotExist= Deployment Info with Deployment Id "{0}
 com.wavemaker.deployment$DeploymentInfoCouldNotBeEmptyOrNull= Deployment Info Could not be Null or Empty
 
 com.wavemaker.platform$UserDoesNotHavePermission = User does not have permission to perform {0} operation
+
+com.wavemaker.platform$ThemeMustContainPropertyFile = Theme folder must contain .wmproject.properties file.
