WMS-3084#Session Timeout Dialog - Error Message refers to WaveMakerCloud. Not sure if it OK...
Change-Id: I54fcbf357a23e2800d65147d948ff4d16a38a04a

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -528,7 +528,7 @@ com.wavemaker.core.failedToValidateUrl=Failed to validate url {0}
 
 com.wavemaker.platform.failedToDeleteProjectFiles=Failed to delete project files for the project {0}
 
-com.wavemaker.platform.unAuthorizedToWavemakerCloud=Unauthorized to WaveMakerCloud,{0}
+com.wavemaker.platform.unAuthorizedToWavemakerCloud=Authentication Failed,{0}
 
 com.wavemaker.platform.unexpectedWavemakerCloudResponse=Unexpected response from WaveMakerCloud,Response Code:{0},msg:{1}
 
