Fixed Exception resolver is not working in application and resolved WMS-669 Length restriction for numeric type fields with a valid error message at runtime. Change-Id: I49190543756f5f6897d288944da550fd3fb52d28

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -478,7 +478,7 @@ com.wavemaker.studio.json$InvalidObject=Invalid Object "{0}",{1}
 
 com.wavemaker.studio.json$UnrecognizedField=Unrecognized field "{0}"
 
-com.wavemaker.studio.json$InvalidJsonObject=Incorrect Json Object
+com.wavemaker.studio.json$InvalidJsonObject=Incorrect Json Object "{0}"
 
 com.wavemaker.studio.json$MessageNotReadable=Message not readable
 
