--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <parent>
 		<groupId>com.wavemaker.studio</groupId>
-		<artifactId>wavemaker-studio</artifactId>
+		<artifactId>wavemaker-app-runtime</artifactId>
 		<version>7.4.1</version>
 	</parent>
 
