Adding wavemaker-studio-commons as parent of wavemaker-studio-common-util
Change-Id: Idd888d2e811282639e46d2b2fc49f91f5a564b28

--- a/wavemaker-studio-common-util/pom.xml
+++ b/wavemaker-studio-common-util/pom.xml
@@ -3,11 +3,15 @@
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+    <parent>
+        <groupId>com.wavemaker.studio</groupId>
+        <artifactId>wavemaker-studio-commons</artifactId>
+        <version>7.4.1</version>
+    </parent>
+
 	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wavemaker.studio</groupId>
     <artifactId>wavemaker-studio-common-util</artifactId>
-    <version>7.4.1</version>
 	<packaging>jar</packaging>
 
     <properties>
