updated message resources
Change-Id: Icc788b3325beae8e1d293c6601ed4b10f938e2e0

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -154,15 +154,15 @@ com.wavemaker.platform$Unable_To_Parse_XML=Unable to parse XML
 
 com.wavemaker.platform$FileTypeNotSupported=File of this "{0}" type is not supported
 
-com.wavemaker.platform$TemplateDoesNotExist=Template with name "{0}" does not exist
+com.wavemaker.platform$ProjectShellDoesNotExist=ProjectShell with name "{0}" does not exist
 
-com.wavemaker.platform$TemplateAlreadyExist=Template already exist with name "{0}"
+com.wavemaker.platform$ProjectShellAlreadyExist=Template already exist with name "{0}"
 
 com.wavemaker.platform$SaveAsNotPossible=Save as not possible from "{0}" to "{1}"
 
 com.wavemaker.platform$FailedToDeleteProject=Failed to delete project "{0}","{1}"
 
-com.wavemaker.platform$FailedToDeleteTemplate=Failed to delete template "{0}"
+com.wavemaker.platform$FailedToDeleteProjectShell=Failed to delete projectShell "{0}"
 
 com.wavemaker.platform$InvalidTemplate=Given file is not a valid template "{0}"
 
