--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -122,6 +122,8 @@ com.wavemaker.platform$Pages_Copy_TargetExists=Page "{0}" already exists in proj
 
 com.wavemaker.platform$Page_Resource_not_exist=Page resource "{0}" does not exist
 
+com.wavemaker.platform$Page_Resource_already_exists=Page with "{0}" name already exists
+
 com.wavemaker.platform$page_resource_update_not_supported=Page resource "{0}" update not supported
 
 com.wavemaker.platform$page_compressed_file_corrupted=Page "{0}" compressed file "{1}" is corrupted
