Localization for template bundles
Change-Id: I21eaae231902463f2923cb3bcf4b26e0dbdbbb02

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -557,3 +557,15 @@ com.wavemaker.deployment$DeploymentInfoCouldNotBeEmptyOrNull= Deployment Info Co
 com.wavemaker.platform$UserDoesNotHavePermission = User does not have permission to perform {0} operation
 
 com.wavemaker.platform$ThemeMustContainPropertyFile = Theme folder must contain .wmproject.properties file.
+
+com.wavemaker.platform.project$FailedToImportTB=   Failed to import template bundle
+
+com.wavemaker.platform.project$FailedToDeleteTB= Failed to delete template bundle {0}
+
+com.wavemaker.platform.project$FailedToReadTB = Failed to read template bundle
+
+com.wavemaker.platform.project$FailedToInitializeTB= Failed to initialize template bundles
+
+com.wavemaker.platform.project$FailedToReadPageResources= Failed to read page resources
+
+com.wavemaker.platform.project$TbDne= Template bundle {0} does not exist
