Load table names using properties
Change-Id: I79d16fa0d56370fcbdd5816c539977b93147ad49

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -292,6 +292,8 @@ com.wavemaker.platform.data$DMAlreadyExists=DataModel already exists.
 
 com.wavemaker.platform.data$DMImportFailure=Failed to import database.
 
+com.wavemaker.platform.data$DMLoadFailure=Failed to load datamodel.
+
 com.wavemaker.platform.data$DMNotExists=Data model does not exist with the name "{0}" , hence reimport is not possible
 
 com.wavemaker.platform.data$FailedToReimport=Failed to reimport database.
