--- a/wavemaker-studio-common-util/pom.xml
+++ b/wavemaker-studio-common-util/pom.xml
@@ -27,6 +27,9 @@
         <wm.jackson.databind.version>2.4.0-rc3-wm1</wm.jackson.databind.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <joda-time.version>2.3</joda-time.version>
+        <jadira-usertype.version>2.0.1</jadira-usertype.version>
     </properties>
 
 	<dependencies>
@@ -83,6 +86,16 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${wm.jackson.databind.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.jodatime</artifactId>
+            <version>${jadira-usertype.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
         </dependency>
 
         <!-- Test Dependencies -->
