Fixed Mysql Date time is mapping to TimeStamp issue
Change-Id: I0f4ac82dc5855f7c247838bff1cea0c213d599d6
(cherry picked from commit ad58460c6bb389aba8a7e82d3ea5fdf960328bd7)

--- a/wavemaker-studio-common-util/pom.xml
+++ b/wavemaker-studio-common-util/pom.xml
@@ -30,6 +30,8 @@
 
         <joda-time.version>2.3</joda-time.version>
         <jadira-usertype.version>2.0.1</jadira-usertype.version>
+
+        <hibernate.version>4.3.5.Final</hibernate.version>
     </properties>
 
 	<dependencies>
@@ -86,6 +88,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${wm.jackson.databind.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jadira.usertype</groupId>
