Added new PrefabResourceNotFound message resource
Change-Id: I2b207d0fa96a6d7057b2c7ffb679357f6db0c8c6

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -196,6 +196,8 @@ com.wavemaker.platform$FailedToDeletePrefab=Failed to delete prefab "{0}"
 
 com.wavemaker.platform$ProjectDirDoesNotExist=Project Directory does not exist : "{0}"
 
+com.wavemaker.platform$PrefabDirDoesNotExist=Prefab Directory does not exist : "{0}"
+
 com.wavemaker.platform.FailedToCreateDir=Failed to create directory "{0}"
 
 com.wavemaker.platform.FailedToCreateFile=Failed to create file at location "{0}"
