Added new message resources in wm_resource.properties
Change-Id: I443271d378cd32deb17fe02ed2d9bb370f3537b1

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -198,6 +198,12 @@ com.wavemaker.platform$ProjectDirDoesNotExist=Project Directory does not exist :
 
 com.wavemaker.platform$PrefabDirDoesNotExist=Prefab Directory does not exist : "{0}"
 
+com.wavemaker.platform$ThemeDirDoesNotExist=Theme Directory does not exist : "{0}"
+
+com.wavemaker.platform$ProjectShellDirDoesNotExist=Project Shell Directory does not exist : "{0}"
+
+com.wavemaker.platform$TemplateBundleDirDoesNotExist=Template Bundle Directory does not exist : "{0}"
+
 com.wavemaker.platform.FailedToCreateDir=Failed to create directory "{0}"
 
 com.wavemaker.platform.FailedToCreateFile=Failed to create file at location "{0}"
