Updated template bundle related message resources
Change-Id: I57a931f1b47e5967ffa4e8a533cc01d22a3843a4

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -564,13 +564,11 @@ com.wavemaker.platform$UserDoesNotHavePermission = User does not have permission
 
 com.wavemaker.platform$ThemeMustContainPropertyFile = Theme folder must contain .wmproject.properties file.
 
-com.wavemaker.platform.project$FailedToImportTB=   Failed to import template bundle
+com.wavemaker.platform.project$FailedToImportTemplateBundle=   Failed to import template bundle
 
-com.wavemaker.platform.project$FailedToDeleteTB= Failed to delete template bundle {0}
+com.wavemaker.platform.project$FailedToDeleteTemplateBundle= Failed to delete template bundle {0}
 
-com.wavemaker.platform.project$FailedToReadTB = Failed to read template bundle
-
-com.wavemaker.platform.project$FailedToInitializeTB= Failed to initialize template bundles
+com.wavemaker.platform.project$FailedToReadTemplateBundle = Failed to read template bundle
 
 com.wavemaker.platform.project$FailedToReadPageResources= Failed to read page resources
 
