--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -573,3 +573,5 @@ com.wavemaker.platform.project$FailedToReadTemplateBundle = Failed to read templ
 com.wavemaker.platform.project$FailedToReadPageResources= Failed to read page resources
 
 com.wavemaker.platform.project$TbDne= Template bundle {0} does not exist
+
+com.wavemaker.studio$InvalidTemplateBundle= {0} not a valid template bundle
