Refactorings 3# 1. Separated DataModel Registry from DataModelDesignManager. 2. Introduced Guava caching in DataModelRegistry. 3. Encrypting  passwords before saving to files and decrypting while retrieving.
Change-Id: Ie1e73b34a0ef64a2c6a3ba053a333223365be202

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -294,6 +294,8 @@ com.wavemaker.platform.data$FailureInSavingDraftDM=Exception while saving draft 
 
 com.wavemaker.platform.data$FailureInSavingQueryModel=Exception while saving queryModel to file
 
+com.wavemaker.platform.data$FailureInSavingProcedureModel=Exception while saving procedureModel to file
+
 com.wavemaker.platform.data$FailureInSavingPublishedDM=Exception while saving published data model to file
 
 com.wavemaker.platform.data$DMAlreadyExists=DataModel already exists.
