--- a/wavemaker-studio-common-util/pom.xml
+++ b/wavemaker-studio-common-util/pom.xml
@@ -15,30 +15,34 @@
 	<packaging>jar</packaging>
 
     <properties>
-        <slf4j.version>1.7.7</slf4j.version>
-        <commons.io.version>2.4</commons.io.version>
-        <commons.codec.version>1.9</commons.codec.version>
-        <commons.lang3.version>3.3.2</commons.lang3.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <slf4j.version>1.7.12</slf4j.version>
 
         <spring.version>4.2.0.RELEASE</spring.version>
-        <spring.security.version>3.2.3.RELEASE</spring.security.version>
+        <spring.security.version>3.2.8.RELEASE</spring.security.version>
+
+        <hibernate.version>4.3.11.Final</hibernate.version>
+
+        <commons.io.version>2.4</commons.io.version>
+        <commons.codec.version>1.10</commons.codec.version>
+        <commons.lang3.version>3.4</commons.lang3.version>
 
         <fasterxml.json.version>2.4.0-rc3</fasterxml.json.version>
         <wm.jackson.databind.version>2.4.0-rc3-wm1</wm.jackson.databind.version>
 
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <joda-time.version>2.3</joda-time.version>
         <jadira-usertype.version>2.0.1</jadira-usertype.version>
 
-        <hibernate.version>4.3.5.Final</hibernate.version>
+        <servlet.version>2.5</servlet.version>
+        <jaxb.impl.version>2.2.5.1</jaxb.impl.version>
     </properties>
 
 	<dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -72,7 +76,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.2.5.1</version>
+            <version>${jaxb.impl.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
