Added theme upgrade messages to wm_resource properties
Change-Id: Ieb575746cb99a02125a6a31276c725aa51024501

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -577,3 +577,7 @@ com.wavemaker.platform.project$FailedToReadPageResources= Failed to read page re
 com.wavemaker.platform.project$TbDne= Template bundle {0} does not exist
 
 com.wavemaker.studio$InvalidTemplateBundle= {0} not a valid template bundle
+
+com.wavemaker.platform$ThemeNewerThanStudio= Can't open theme "{0}" because it is newer than the studio (theme version "{1}", studio theme version "{2}")
+
+com.wavemaker.platform$ThemeTooOldForUpgrade= Can't open theme "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old theme. Found theme version "{1}"
