Adding new template bundle migration messages to wm_resource properties
Change-Id: Iee4c579be67124e66107e2ae1487583cc1128bee

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -581,3 +581,7 @@ com.wavemaker.studio$InvalidTemplateBundle= {0} not a valid template bundle
 com.wavemaker.platform$ThemeNewerThanStudio= Can't open theme "{0}" because it is newer than the studio (theme version "{1}", studio theme version "{2}")
 
 com.wavemaker.platform$ThemeTooOldForUpgrade= Can't open theme "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old theme. Found theme version "{1}"
+
+com.wavemaker.platform$TemplateBundleNewerThanStudio= Can''t open template bundle "{0}" because it is newer than the studio (template bundle version "{1}", studio template bundle version "{2}")
+
+com.wavemaker.platform$TemplateBundleTooOldForUpgrade= Can''t open template bundle "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old template bundle. Found template bundle version "{1}"
