--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -585,3 +585,5 @@ com.wavemaker.platform$ThemeTooOldForUpgrade= Can't open theme "{0}" because it 
 com.wavemaker.platform$TemplateBundleNewerThanStudio= Can''t open template bundle "{0}" because it is newer than the studio (template bundle version "{1}", studio template bundle version "{2}")
 
 com.wavemaker.platform$TemplateBundleTooOldForUpgrade= Can''t open template bundle "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old template bundle. Found template bundle version "{1}"
+
+com.wavemaker.studio.core.data$DataTruncationPossibility=Data loss will be occurred for Column: {0} in Table: {1}
