--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.wavemaker.studio</groupId>
     <artifactId>wavemaker-studio-commons</artifactId>
-    <version>8.0</version>
+    <version>8.0.0.BETA-2</version>
 
     <packaging>pom</packaging>
 
