--- a/wavemaker-studio-common-util/pom.xml
+++ b/wavemaker-studio-common-util/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.wavemaker.studio</groupId>
         <artifactId>wavemaker-studio-commons</artifactId>
-        <version>8.0.0.BETA-2</version>
+        <version>8.0.0</version>
     </parent>
 
     <artifactId>wavemaker-studio-common-util</artifactId>
