0# validating source & target columns types while creating relation.
Change-Id: If8cdb0d92ae004788571fa7d9b6b5ab22a3f788f

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -376,6 +376,8 @@ com.wavemaker.platform.data$PkColsCntNotMatched=No of Pk columns is target is no
 
 com.wavemaker.platform.data$RelColsCntMismatch=No of related column size is not same as FK columns size .
 
+com.wavemaker.platform.data$RelColsTypetMismatch=Source column and target column's type not matched.
+
 com.wavemaker.platform.data$OneToZeroRelNotPossibe=OneToZeroOrOne relation is not possible for notnull true column "{0}".
 
 com.wavemaker.platform.data$PkColBlobNotSupported=Primary Key column with CLOB/BLOB type is not supported.
