Validating each table to have atleast on PrimaryKey Column.
Change-Id: Ic445adb702959549fe38d5f7b9ef709f39d05a18

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -362,7 +362,7 @@ com.wavemaker.platform.data$RelationAlreadyExists=Relation already exist with na
 
 com.wavemaker.platform.data$RelatedTypeDoesNtExist=Related type table does not exist "{0}".
 
-com.wavemaker.platform.data$AtleastOneRelColExists=At least one related column should exist in "{0}".
+com.wavemaker.platform.data$AtleastOneRelColExists=Atleast one related column should exist in "{0}".
 
 com.wavemaker.platform.data$RelatedColAlreadyFk=Related column is already FK "{0}".
 
