Adding scale param to DataColumn and making necessary changes.
Change-Id: Ie646ae11f8672e37338bd385cd0f641b51912be8

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -390,7 +390,11 @@ com.wavemaker.platform.data$PkColSequnceTypeInvalid= Primary key column with gen
 
 com.wavemaker.platform.data$PkColSequenceValueEmpty=Primary key column with generator type sequence should have a sequence name.
 
+com.wavemaker.platform.data$AtleastOnePKcolumnShouldExist=Atleast one primary key Column must be give for table "{0}"
+
 com.wavemaker.platform.data$ColLenGrtZero="{0}" column with "{1}" data type length should not be NULL or 0.
+
+com.wavemaker.platform.data$PrecisionOutOfBound="{0}" column with "{1}" data type precision is out of bound.
 
 com.wavemaker.platform.deployment$UnknownDeploymentTarget=Unknown deployment target: "{0}"
 
