0# validating relations before primarykey updation
Change-Id: I922d66103c83cec142bcd9fd4bd6989bbb425a60

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -492,6 +492,8 @@ com.wavemaker.studio.json$InvalidFieldValue=Invalid Field value for the paramete
 
 com.wavemaker.studio.json$InvalidObject=Invalid Object "{0}",{1}
 
+com.wavemaker.studio.json$InvalidRelation=Invalid "{0}" relation from "{1}" to "{2}".
+
 com.wavemaker.studio.json$UnrecognizedField=Unrecognized field "{0}"
 
 com.wavemaker.studio.json$InvalidJsonObject=Incorrect Json Object "{0}"
