0# 1. Fixed reading unique constraints. 2. Throwing custom error message for DataIntegrityViolation.
Change-Id: I92016846552f900a2ed6509f0ea528b01c351b23

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -596,4 +596,6 @@ com.wavemaker.platform$TemplateBundleTooOldForUpgrade= Can''t open template bund
 
 com.wavemaker.studio.core.data$DataTruncationPossibility=Data loss will be occurred for Column: {0} in Table: {1}
 
+com.wavemaker.runtime.data$DataIntegrityViolation= Data Integrity Constraint Violated: {0}
+
 com.wavemaker.studio.core.data.helpers.SchemaUpdater$updateDBFailed= Error while updating database schema. Error :{0}
