--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -380,19 +380,21 @@ com.wavemaker.platform.data$RelColsTypetMismatch=Source column and target column
 
 com.wavemaker.platform.data$OneToZeroRelNotPossibe=OneToZeroOrOne relation is not possible for notnull true column "{0}".
 
-com.wavemaker.platform.data$PkColBlobNotSupported=Primary Key column with CLOB/BLOB type is not supported.
+com.wavemaker.platform.data$PkColBlobNotSupported=Primary Key column with BLOB type is not supported.
 
 com.wavemaker.platform.data$PkColLengGrtZero=Primary key column with "{0}" data type length should not be NULL or 0.
 
 com.wavemaker.platform.data$PkColLengtLessTwoFiveFive=Primary key column with "{0}" data type length can not exceed 255 characters.
 
-com.wavemaker.platform.data$PkColSequnceTypeInvalid= Primary key column with generator type sequence should have sql type number.
+com.wavemaker.platform.data$PkColSequenceTypeInvalid= Primary key column "{0}" with generator type sequence should have sql type integer, long or big_integer
 
 com.wavemaker.platform.data$PkColSequenceValueEmpty=Primary key column with generator type sequence should have a sequence name.
 
 com.wavemaker.platform.data$AtleastOnePKcolumnShouldExist=Atleast one primary key Column must be give for table "{0}"
 
-com.wavemaker.platform.data$ColLenGrtZero="{0}" column with "{1}" data type length should not be NULL or 0.
+com.wavemaker.platform.data$ColLenGrtZero="{0}" column with String data type length should not be NULL or 0.
+
+com.wavemaker.platform.data$InvalidSqlTypeParameter="No type mapping for SQLType "{0}" for given parameters".
 
 com.wavemaker.platform.data$PrecisionOutOfBound="{0}" column with "{1}" data type precision is out of bound.
 
@@ -590,12 +592,25 @@ com.wavemaker.platform$ThemeNewerThanStudio= Can't open theme "{0}" because it i
 
 com.wavemaker.platform$ThemeTooOldForUpgrade= Can't open theme "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old theme. Found theme version "{1}"
 
-com.wavemaker.platform$TemplateBundleNewerThanStudio= Can''t open template bundle "{0}" because it is newer than the studio (template bundle version "{1}", studio template bundle version "{2}")
+com.wavemaker.platform$TemplateBundleNewerThanStudio= Can't open template bundle "{0}" because it is newer than the studio (template bundle version "{1}", studio template bundle version "{2}")
 
-com.wavemaker.platform$TemplateBundleTooOldForUpgrade= Can''t open template bundle "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old template bundle. Found template bundle version "{1}"
+com.wavemaker.platform$TemplateBundleTooOldForUpgrade= Can't open template bundle "{0}" because it is too old to be upgraded or no version property was found. Check .wmproject.properties file or use a previous version of studio to upgrade if this is a very old template bundle. Found template bundle version "{1}"
 
 com.wavemaker.studio.core.data$DataTruncationPossibility=Data loss will be occurred for Column: {0} in Table: {1}
 
 com.wavemaker.runtime.data$DataIntegrityViolation= Data Integrity Constraint Violated: {0}
 
 com.wavemaker.studio.core.data.helpers.SchemaUpdater$updateDBFailed= Error while updating database schema. Error :{0}
+
+com.wavemaker.studio.server$identityNotSupported = Unsupported Generator type Identity at column {0}
+
+com.wavemaker.studio.server$invalidPrecision = Precision value must be in range {0} and {1}
+
+com.wavemaker.studio.server$invalidScale = Scale value must be in range {0} and  {1}
+
+com.wavemaker.studio.server$invalidDefaultValue = Default value is not supported at column {0}.
+
+com.wavemaker.studio.server$invalidCompositeGenerator = Invalid Generator type for composite Primary key at column {0}.
+
+com.wavemaker.studio.server$invalidGenerator =  Unsupported Generator type  at column {0}.
+
