--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -386,7 +386,7 @@ com.wavemaker.platform.data$PkColLengGrtZero=Primary key column with "{0}" data 
 
 com.wavemaker.platform.data$PkColLengtLessTwoFiveFive=Primary key column with "{0}" data type length can not exceed 255 characters.
 
-com.wavemaker.platform.data$PkColSequnceTypeInvalid= Primary key column with generator type sequence should have sql type integer, big_integer or big_decimal
+com.wavemaker.platform.data$PkColSequnceTypeInvalid= Primary key column with generator type sequence should have sql type number.
 
 com.wavemaker.platform.data$PkColSequenceValueEmpty=Primary key column with generator type sequence should have a sequence name.
 
