Moving swagger dependency to runtime to use in app build module.
Change-Id: Ib9bf5242f9fe05f6c93727eeecdf83c4a51598cb

--- a/wavemaker-studio-common-util/pom.xml
+++ b/wavemaker-studio-common-util/pom.xml
@@ -39,9 +39,15 @@
 
         <servlet.version>2.5</servlet.version>
         <jaxb.impl.version>2.2.5.1</jaxb.impl.version>
+        <wavemaker-api-tools.version>2.0</wavemaker-api-tools.version>
     </properties>
 
 	<dependencies>
+        <dependency>
+            <groupId>com.wavemaker.tools.apidocs</groupId>
+            <artifactId>wavemaker-tools-apidocs-core</artifactId>
+            <version>${wavemaker-api-tools.version}</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
