0# Fixed restricting adding one to one relation for columns having IDENTITY generator for SQLServer.
Change-Id: I6133fd8a2c400ed8d43d7a4be9dd832d019c500e

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -602,6 +602,8 @@ com.wavemaker.runtime.data$DataIntegrityViolation= Data Integrity Constraint Vio
 
 com.wavemaker.studio.core.data.helpers.SchemaUpdater$updateDBFailed= Error while updating database schema. Error :{0}
 
+com.wavemaker.runtime.data$RelationWithIdentityColumnNotPossible= SQL Server: Can't create Foreign key for column having IDENTITY generator
+
 com.wavemaker.studio.server$identityNotSupported = Unsupported Generator type Identity at column {0}
 
 com.wavemaker.studio.server$invalidPrecision = Precision value must be in range {0} and {1}
