0# 1. Fixed showing validation errors in logs. 2. Fixed  condtitions for validating primary key before update.
Change-Id: I3eaa9883149ba03bd9a5d09c769e9e6793195d7a

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -612,6 +612,9 @@ com.wavemaker.studio.server$invalidScale = Scale value must be in range {0} and 
 
 com.wavemaker.studio.server$invalidDefaultValue = Default value is not supported at column {0}.
 
+com.wavemaker.studio.server$pkCannotHaveDefaultValue = Primary Key column should not have default value {0}.
+
+
 com.wavemaker.studio.server$invalidCompositeGenerator = Invalid Generator type for composite Primary key at column {0}.
 
 com.wavemaker.studio.server$invalidGenerator =  Unsupported Generator type  at column {0}.
