0# added validations for unique keys. 1. unique key not part of primary key. 2. duplicate constraints validation.
Change-Id: I37e24d3661dea84bcaccb238bfdb69e5d988a70f

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -604,6 +604,10 @@ com.wavemaker.studio.core.data.helpers.SchemaUpdater$updateDBFailed= Error while
 
 com.wavemaker.runtime.data$RelationWithIdentityColumnNotPossible= SQL Server: Can't create Foreign key for column having IDENTITY generator
 
+com.wavemaker.runtime.data$UniqueKeyForPrimaryKey = Primary key already Unique key. No need specify separately.
+
+com.wavemaker.runtime.data$DuplicateConstraint = Constraint already defined in table {0} with same columns.
+
 com.wavemaker.studio.server$identityNotSupported = Unsupported Generator type Identity at column {0}
 
 com.wavemaker.studio.server$invalidPrecision = Precision value must be in range {0} and {1}
