0# 1.Moved generator and sequenceName parameters from column to table level  2.Fixed migrations to be independent on DataModelDesignManager for DataModel Objects.
Change-Id: Ic226a7beec77b71e50fa34845bdbb63cc5635592

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -386,12 +386,6 @@ com.wavemaker.platform.data$PkColLengGrtZero=Primary key column with "{0}" data 
 
 com.wavemaker.platform.data$PkColLengtLessTwoFiveFive=Primary key column with "{0}" data type length can not exceed 255 characters.
 
-com.wavemaker.platform.data$PkColSequenceTypeInvalid= Primary key column "{0}" with generator type sequence should have sql type integer, long or big_integer
-
-com.wavemaker.platform.data$PkColSequenceValueEmpty=Primary key column with generator type sequence should have a sequence name.
-
-com.wavemaker.platform.data$AtleastOnePKcolumnShouldExist=Atleast one primary key Column must be give for table "{0}"
-
 com.wavemaker.platform.data$ColLenGrtZero="{0}" column with String data type length should not be NULL or 0.
 
 com.wavemaker.platform.data$InvalidSqlTypeParameter="No type mapping for SQLType "{0}" for given parameters".
@@ -610,6 +604,8 @@ com.wavemaker.runtime.data$DuplicateConstraint = Constraint already defined in t
 
 com.wavemaker.studio.server$identityNotSupported = Unsupported Generator type Identity at column {0}
 
+com.wavemaker.studio.server$generatorNotSupported = Unsupported Generator type {0} at table {1}.
+
 com.wavemaker.studio.server$invalidPrecision = Precision value must be in range {0} and {1}
 
 com.wavemaker.studio.server$invalidScale = Scale value must be in range {0} and  {1}
@@ -618,8 +614,11 @@ com.wavemaker.studio.server$invalidDefaultValue = Default value is not supported
 
 com.wavemaker.studio.server$pkCannotHaveDefaultValue = Primary Key column should not have default value {0}.
 
+com.wavemaker.studio.server$invalidCompositeGenerator = Invalid Generator type for composite Primary key at table {0}.
 
-com.wavemaker.studio.server$invalidCompositeGenerator = Invalid Generator type for composite Primary key at column {0}.
+com.wavemaker.studio.server$invalidGeneratorToType =  Unsupported Generator type at table {0}.
 
-com.wavemaker.studio.server$invalidGenerator =  Unsupported Generator type  at column {0}.
+com.wavemaker.studio.server$invalidConstraintType = UnSupported constraint type at table {0}.
+
+com.wavemaker.studio.server$generatorValueEmpty = GeneratorValue cannot be empty for primary key at table {0}.
 
