0# Changed the validation message on deleting primary key column.
Change-Id: I4f007196ff22235c7f8cf0ad6434371499fe1739

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -338,7 +338,7 @@ com.wavemaker.platform.data$ColAlreadyExists=Column is already exist in the Tabl
 
 com.wavemaker.platform.data$ForeingKeyNotPossible=Foreign key is not possible while creating a column.
 
-com.wavemaker.platform.data$PkColCannbeDel=PK column deletion is  not allowed.
+com.wavemaker.platform.data$PkColCannbeDel=Column which is primary key cannot be deleted for table "{0}".
 
 com.wavemaker.platform.data$DelRelToDelColumn=This column has a relation,So first delete relation and then delete column.
 
