WMS-9356# Fixed default values in script generation 2. Added validation for boolean type  default values in writable databases.
Change-Id: Id9f67e2e01ea900c37a39af143e4c118f30c953a

--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -610,7 +610,9 @@ com.wavemaker.studio.server$invalidPrecision = Precision value must be in range 
 
 com.wavemaker.studio.server$invalidScale = Scale value must be in range {0} and  {1}
 
-com.wavemaker.studio.server$invalidDefaultValue = Default value is not supported at column {0}.
+com.wavemaker.studio.server$invalidDefaultValue = Invalid Default value is provided for column {0} in table {1}.
+
+com.wavemaker.studio.server$unsupportedDefaultValue = Default value is not allowed for column {0} in table {1}.
 
 com.wavemaker.studio.server$pkCannotHaveDefaultValue = Primary Key column should not have default value {0}.
 
