--- a/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-studio-common-util/src/main/resources/wm_resource.properties
@@ -602,6 +602,8 @@ com.wavemaker.runtime.data$UniqueKeyForPrimaryKey = Primary key already Unique k
 
 com.wavemaker.runtime.data$DuplicateConstraint = Constraint already defined in table {0} with same columns.
 
+com.wavemaker.runtime.data$InvalidTypeAsUnique = Column of data type LOB cannot be unique at column {0} in table {1}.
+
 com.wavemaker.studio.server$identityNotSupported = Unsupported Generator type Identity at column {0}
 
 com.wavemaker.studio.server$generatorNotSupported = Unsupported Generator type {0} at table {1}.
