--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wavemaker.studio</groupId>
-    <artifactId>wavemaker-studio-commons</artifactId>
+    <artifactId>wavemaker-commons</artifactId>
     <version>8.3.4</version>
 
     <packaging>pom</packaging>
