--- a/wavemaker-studio-common-util/pom.xml
+++ b/wavemaker-studio-common-util/pom.xml
@@ -7,7 +7,7 @@
 
     <parent>
         <groupId>com.wavemaker.studio</groupId>
-        <artifactId>wavemaker-studio-commons</artifactId>
+        <artifactId>wavemaker-commons</artifactId>
         <version>8.3.4</version>
     </parent>
 
