Renaming group ids of wavemaker modules.
Change-Id: Idc750979edfd36379eacfc739182ab983f0fef55

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wavemaker.studio</groupId>
+    <groupId>com.wavemaker.commons</groupId>
     <artifactId>wavemaker-commons</artifactId>
     <version>8.3.4</version>
 
