0# Logging type mapping exceptions with column and class details.
Change-Id: Id12bb49b8daacafe5959c6d4e9a5c25f24765286
(cherry picked from commit f7d4c5ce825ee0771ea2ab9ab253b32a102a9f96)

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -481,6 +481,7 @@ com.wavemaker.studio.json$NoGetterInType=No getter for attribute "{0}" from obje
 com.wavemaker.studio.json$ErrorGettingProperty=Error getting property "{0}" from object "{1}" ("{2}")
 
 com.wavemaker.studio.json$UnexpectedHandleType=Unexpected handle type: "{0}"
+com.wavemaker.runtime.data$TypeMappingFailure=Error setting property to field: "{0}" in class "{1}.
 
 com.wavemaker.studio.json$CycleFound=Cycle found in object "{0}"; using handler "{1}"
 
